# social

./: .env.actions  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
backend/: alembic.ini  conftest.py  requirements.txt  settings.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 9411051cecc2_migration_to_fastapi_users.py  dbf4fb88c065_initial_migration.py
backend/src/: app.py  auth.py  models.py
backend/src/auth/: config.py  core.py
backend/src/controllers/: auth.py
backend/src/db/: config.py  manager.py
backend/src/schemas/: user.py
backend/src/services/: user_service.py
backend/tests/: conftest.py  mock_users.json
backend/tests/unit_tests/users/: test_api.py
