[project]
name = "abtestapp4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.7",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.9.2",
    "sqlalchemy>=2.0.37",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]

[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]
addopts = [
    "--import-mode=importlib",
]
